# forge

./: .gitignore  AGENTS.md  CONTRIBUTING.md  GEMINI.md  README.md  Repo Split Strategy.md  agno_issue.md  approach.md  architecture.excalidraw  branch_list.txt  checkout_log.txt  do_git.bat  forge.excalidraw  nova_openai_compatibility_issue.md  render.yaml  tasks.md
agents/: requirements.txt  server.py
ai-chats/: Claude_export_AOrchestra potential applications_a5bbd214-7fc0-4173-a063-e70d69c284d5 (1).md  Claude_export_Arxiv research paper PDF_ec33bc2f-98d5-4923-9a1c-39999a5d889e (1).md  Claude_export_Closing the software loop_c7ce72c7-6dc7-4956-9de2-1ae9be983854.md  Claude_export_Joon Sung Park dissertation_4f7cc0df-dab2-4726-bf0e-56e35dbb9e57.md  Claude_export_Time-budgeted inference for AI agents_e28350b8-1f76-49a9-a5f7-15bb86ea0796.md  Gemini-Building Legal Reasoning SaaS.md
app/: globals.css  page.tsx
blueprint-formats/: 0.md  1.md  2.md  3.md
docs/: README.md  wip-log.md
forge-app/: .gitignore  README.md  issue.md  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts  run-migration.sh  setup-database.sh  test_openai.py
forge-app/agents/: README.md  core.py  knowledge.py  models.py  pyproject.toml  requirements.txt  server.py  test_revamp.py  tools.py  workflow.py
forge-app/agents/lib/: hooks.py  parsers.py
forge-app/agents/prompts/: analyst.py  architect.py  strategist.py
forge-app/agents/tools/: arxiv.py  scholar.py
full-stack-web/: test_bedrock.py
lib/: arxiv.ts  types.ts
mcp-server/: README.md  package-lock.json  (+1 more)
(+109 files in other folders)
